--- a/FinalProject/Brackets/package.json
+++ b/FinalProject/Brackets/package.json
@@ -18,6 +18,7 @@
     "mongoose-findorcreate": "^0.1.2",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
